# tuicher

./: README.md  package.json  vite.config.js
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: action.rs  apps.rs  config.rs  lib.rs  listener.rs  main.rs  search.rs
src-tauri/src/plugins/: bookmarks.rs  emojis.rs  mod.rs  session.rs
src/lib/features/config/: Config.ts  ConfigRepo.ts
src/lib/features/result/: TUIResult.ts
src/routes/: +page.svelte  MainVM.ts
src/routes/settings/: +page.svelte
