[package]
name = "tuicher"
version = "1.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tuicher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tuicher-rs = {path = "/home/lighttigerxiv/dev/whiskers-apps/tuicher-rs/"}
freedesktop-desktop-entry = "0.7.19"
open = "5.3.2"
dirs = "6.0.0"
bincode = "2.0.1"
sniffer-rs = "1.1.2"
notify = "8.2.0"
walkdir = "2.5.0"
tux-icons = "0.4.5"
emojis = "0.8.0"
reqwest = "0.12.24"
tokio = { version = "1.47.2", features = ["full"] }
tokio-macros = "2.6.0"
regex = "1.12.2"

